converted the top header image to a background image and fix that section on mobile screen

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -50,11 +50,14 @@
 }
 //MAIN STYLES
 main {
-    .top-fluid {
+    .top-fluid {        
+            background-image: url("https://res.cloudinary.com/peterdbrainy/image/upload/v1583613796/top-head.png");
+            width: 100%;
+            height: 633px;      
+       
         div[top-content]{
-            position: absolute;
-            top: 43%;
-            left: 12%;
+            padding-top: 13%;
+            margin-left: 12%;
             h2{
             font-family: 'Muli', sans-serif;
             font-size: 48px;
@@ -649,5 +652,31 @@ main {
             font-size: 14px;
         }
       }  
+}
+
+//body
+main{
+    .top-fluid{    
+        background-image: url("https://res.cloudinary.com/peterdbrainy/image/upload/v1583613796/top-head.png");
+        width: 100%;
+        height: 433px;      
+        div[top-content]{            
+           h2{
+            margin-top: 35px;
+            font-size: 25px;
+            line-height: 25px;
+           }
+           p{
+            margin-top: 15px;
+            font-size: 12px;
+            line-height: 20px;    
+           }
+           button[type="submit"]{
+             width: 130px;
+             height: 40px;
+             font-size: 10px;  
+           }
+        }
+    }
 }
 }
